se agregan cambios

--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
                             <p id="sp-atk"></p>
                             <p id="sp-def"></p>
                         </div>
+                        <div class="col-sm-offset-1 col-sm-5">
+                            <p id="type"></p>
+                            <p id="abilities"></p>
+                            <p id="weight"></p>
+                            <p id="height"></p>
+                        </div>
                     </div>
-                    
-
-                    
-
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
